deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: website
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: website
