deploy/k8s/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
    kubernetes.io/ingress.class: nginx-vultr
    external-dns.alpha.kubernetes.io/endpoints-type: NodeExternalIP
  labels:
    app: portal
  name: portal-www
spec:
  ingressClassName: nginx-vultr
  rules:
    - host: www.goraxe.me.uk
      http:
        paths:
          - backend:
              service:
                name: portal
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - www.goraxe.me.uk
      secretName: www-test-cert # pragma: allowlist secret
