deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
    kubernetes.io/ingress.class: nginx
  labels:
    app: website
  name: website
spec:
  rules:
    - host: www.goraxe.me.uk
      http:
        paths:
          - backend:
              service:
                name: website
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - www.goraxe.me.uk
      secretName: www-cert # pragma: allowlist secret
